HELLODATA-1762 - init admin data, use cache for users